@@ -5130,14 +5130,17 @@ sub AI {
 	##### ALLOWED MAPS #####
 	# Disconnect if you're on a map other than the specified list of maps.
 	# This is to mostly useful on pRO, where GMs warp you to a secret room.
-	if ($field{name} && $config{allowedMaps} && !existsInList($config{allowedMaps}, $field{name})) {
+	if ($field{name} && $config{allowedMaps} && timeOut($timeout{ai_teleport}) && !existsInList($config{allowedMaps}, $field{name})
+	 && $ai_v{temp}{allowedMapRespawnAttempts} < 3) {
 		warning "The current map ($field{name}) is not on the list of allowed maps.\n";
 		chatLog("k", "** The current map ($field{name}) is not on the list of allowed maps.\n");
 		ai_clientSuspend(0, 5);
 		if ($config{allowedMaps_reaction} == 0) {
 			message "Respawning to save point.\n";
 			chatLog("k", "** Respawning to save point.\n");
+			$ai_v{temp}{allowedMapRespawnAttempts}++;
 			useTeleport(2);
+			$timeout{ai_teleport}{time} = time;
 		} else {
 			chatLog("k", "** Exiting...\n");
 			quit();
